todo-app/todo-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: todo-app
  namespace: todo-app
  labels:
    name: todo-app
spec:
  replicas: 3
  template:
    metadata:
      name: todo-app
      namespace: todo-app
      labels:
        name: todo-app
    spec:
      containers:
        - name: "todo-app"
          image: "johscheuer/todo-app-web:v4"
          command: ["./todo-app"]
          args: ["-config-file", "/etc/redis.config"]
          resources:
            limits:
              cpu: 100m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 500Mi
          volumeMounts:
            - name: "todo-app-conf"
              mountPath: "/etc/"
          ports:
            - containerPort: 3000
              protocol: "TCP"
          livenessProbe:
            httpGet:
              path: "/health"
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: todo-app-conf
          configMap:
            name: todo-app-config
