todo-app/todo-app-service.yaml
kind: "Service"
apiVersion: "v1"
metadata:
  name: "todo-app"
  namespace: todo-app
  labels:
    name: "todo-app"
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: "TCP"
  selector:
    name: "todo-app"
