todo-app/todo-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-app
  namespace: todo-app
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-app
          servicePort: 3000
